--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -46,5 +46,5 @@ button {
 }
 
 a {
-  font-size: calc(0.8rem + 0.4vw);
+  font-size: calc(1.2rem + 0.4vw);
 }
