--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,10 +1,14 @@
 .header {
   color: $color-black;
   background: $color-white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  width: 100%;
+  z-index: 2;
   box-shadow: 0 0 1.7rem rgba(0, 0, 0, 0.2);
 
   .progress {
@@ -28,54 +32,98 @@
     justify-content: space-between;
   }
 
-  p {
-    cursor: pointer;
-    z-index: 200;
+  input,
+  label {
+    display: none;
   }
 
-  p.color-change {
-    color: $color-white;
+  label {
+    color: $secondary-color;
+  }
+
+  ul {
+    display: flex;
+    list-style: none;
+  }
+
+  li:not(:last-child) {
+    margin-right: 2.5rem;
+  }
+
+  a {
+    font-size: calc(1rem + 0.2vw);
+    color: $secondary-color;
+    text-decoration: none;
   }
 
   svg g {
     fill: $secondary-color;
   }
 
-  nav {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    height: 40vh;
-    transform: translateX(-100%);
-    align-items: center;
-    background: $secondary-color;
-    transition: transform 0.3s;
+  @media screen and (max-width: 700px) {
+    nav {
+      position: absolute;
+      width: 100%;
+      top: 100%;
+      left: 0;
+      height: 0;
+      overflow: hidden;
+      background: $color-white;
+      transition: height 0.3s;
+    }
 
     ul {
-      list-style: none;
-      display: flex;
+      text-align: center;
+      padding: 2rem 0;
       flex-direction: column;
-      text-transform: capitalize;
-      margin-top: 3rem;
     }
 
     li {
       margin-bottom: 1rem;
     }
 
-    a {
-      text-decoration: none;
-      color: $color-white;
-      font-weight: 600;
-      transition: color 0.3s;
+    li:not(:last-child) {
+      margin-right: 0;
+    }
+
+    label {
+      display: inline-block;
+      padding: 0.2rem 0.8rem;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    nav.opened {
+      height: 30vh;
     }
   }
-
-  nav.open {
-    transform: translateX(0);
-  }
 }
+
+// @media screen and (min-width: 750px) {
+//   nav {
+//     display: flex;
+//     flex-direction: column;
+//     transform: translateX(0) !important;
+//     align-items: center;
+//     background: $secondary-color;
+//     transition: transform 0.3s;
+//   }
+
+//   ul {
+//     list-style: none;
+//     display: flex;
+//     flex-direction: row;
+//     text-transform: capitalize;
+//     margin: 0;
+//   }
+
+//   li {
+//     margin-bottom: 0;
+//   }
+
+//   a {
+//     color: $secondary-color;
+//     transition: color 0.3s;
+//   }
+// }
