--- a/sass/components/_sections.scss
+++ b/sass/components/_sections.scss
@@ -148,10 +148,6 @@
   }
 }
 
-//services section mq
-@media screen and (min-width: 750px) {
-}
-
 //contact section mq
 @media screen and (min-width: 750px) {
   .form-container {
